--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Sentimental Stock</title>
+    <title>Home - Health Predictor</title>
     <link rel='stylesheet' href='https://rawcdn.githack.com/SochavaAG/example-mycode/master/_common/css/reset.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="/home.css">
 </head>
 
 <body>
-    
     <header class="header">
-        <a href="#" class="logo">SentimentalStock</a>
+        <a href="#" class="logo">Health Predictor</a>
         <nav class="nav-items">
-            <a href="/authentication" id="mainbtn">Login/SignUp</a>
+            <a href="/authentication"  id="mainbtn">Login/SignUp</a>
             <a href="#">Home</a>
             <a href="javascript: document.body.scrollIntoView(false);">Contact</a>
         </nav>
@@ -27,90 +25,52 @@
             <p>I am a web developer and I love to create websites.</p>
             <button>Learn More</button>
         </div> -->
-        <div class="about-me" >
+        <div class="about-me">
             <div class="about-me-text">
-                <h2>Real Time Sentiment Analysis for Smarter Investing</h2>
-                <button class="go">Discover our Suite</button>
-                <!-- <p>Join our medical web platform and get access to accurate and timely prognoses for severe yet curable
-                    diseases and personalized health recommendations.</p> -->
+                <h2>Health Predictor uses AI to find the right treatment for every patient</h2>
+                <p>Join our medical web platform and get access to accurate and timely prognoses for severe yet curable diseases and personalized health recommendations.</p>
             </div>
-            <img src="81.png" alt="me" width="150%">
+            <img src="hf1.png" alt="me">
         </div>
         <div id="med">
             HI , WE'RE MED
         </div>
         <div class="weare">
-            Make informed investment decisions with our powerful sentiment analysis tool , delivering real-time insights into market 
-            and trends . 
+            We're all about real science , real data and machine learning that positively impact customers' lives .
         </div>
         <div class="achievements">
             <div class="work">
-                <img src="div.png" alt="" srcset="">
-                <p class="work-heading">Report</p>
-                <p class="work-text">Tested by 80+ personalized reports</p>
+                <img src="div-3.png" alt="" srcset="">
+                <p class="work-heading">Research</p>
+                <p class="work-text">Tested through Breakthrough researches by top scientists.</p>
             </div>
             <div class="work">
                 <img src="div-1.png" alt="" srcset="">
                 <p class="work-heading">Protected</p>
-                <p class="work-text">User's Data is stored secure and encrypted </p>
+                <p class="work-text">Patient's Data is stored secure and encrypted </p>
             </div>
             <div class="work">
-                <img src="Frame.png" alt="heloooo">
+                <img src="div-2.png" alt="heloooo" >
                 <p class="work-heading">Data analysis</p>
                 <p class="work-text">2+ million Data has been Analyzed .</p>
             </div>
             <div class="work">
-                <img src="div-3.png" alt="" srcset="">
-                <p class="work-heading">Research</p>
-                <p class="work-text">Break Through Research</p>
+                <img src="div.png" alt="" srcset="">
+                <p class="work-heading">reports</p>
+                <p class="work-text">Get personalized diet plan based on health conditions </p>
             </div>
 
         </div>
-        <div class="ag-format-container redirect-btn">
-            
-            <a href="/new" alt="Mythrill"  class="one">
-                
-                <div class="card">
-                    <div class="wrapper">
-                        <img src="b2.jpg" alt="halw" srcset="" width="200px" height="282px">
-                        <!-- <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-cover.jpg" class="cover-image" /> -->
-                    </div>
-                    <!-- <img src="bb1.png" alt="boys" srcset="" class="character"> -->
-                    <!-- <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-title.png" class="title" />
-                    <img src="https://ggayane.github.io/css-experiments/cards/dark_rider-character.webp" class="character" /> -->
-                </div>
-                <span class="des">&nbsp;&nbsp;&nbsp;New prediction</span>
-                <br>
-                <span class="arro">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&rarr;</span>
-
-            </a>
-            
-            <a href="/previous" alt="Mythrill" class="two">
-                
-                <div class="card">
-                    <div class="wrapper">
-                        <!-- <img src="https://source.unsplash.com/200x282/?stock-market" alt="boys" srcset="" class="cover-image"> -->
-                        <img src="b1.jpg" alt="halwa" srcset="" width="200px" height="282px">
-                        <!-- <img src="https://ggayane.github.io/css-experiments/cards/force_mage-cover.jpg" class="cover-image" /> -->
-                    </div>
-                    <!-- <img src="https://source.unsplash.com/200x282/?stock-market" alt="boys" srcset="" class="title"> -->
-                    <!-- <img src="https://ggayane.github.io/css-experiments/cards/force_mage-title.png" class="title" /> -->
-                    <!-- <img src="bb1.png" alt="boys" srcset="" class="character"> -->
-                    <!-- <img src="https://ggayane.github.io/css-experiments/cards/force_mage-character.webp" class="character" /> -->
-                </div>
-                <span class="des">View Previous Predictions</span>
-                <br>
-                <span class="arro">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&rarr;</span>
-            </a>
-            <!-- <div class="ag-courses_box">
+        <div class="ag-format-container">
+            <div class="ag-courses_box">
                 <div class="ag-courses_item">
-                    <a href="/bloods/new" class="ag-courses-item_link">
+                    <a href="/bloodreport" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
-
+        
                         <div class="ag-courses-item_title">
-                            New Stock Prediction
+                            Blood Report Analysis
                         </div>
-
+        
                         <div class="ag-courses-item_date-box">
                             Start:
                             <span class="ag-courses-item_date">
@@ -119,32 +79,15 @@
                         </div>
                     </a>
                 </div>
-
+        
                 <div class="ag-courses_item">
                     <a href="/xrayreport" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
-
+        
                         <div class="ag-courses-item_title">
-                            Previous stock prediction
+                            X-rays Report Analysis
                         </div>
-
-                        <div class="ag-courses-item_date-box">
-                            Start:
-                            <span class="ag-courses-item_date">
-                                04.11.2022
-                            </span>
-                        </div>
-                    </a>
-                </div> -->
-
-                <!-- <div class="ag-courses_item">
-                    <a href="/recoveryreport" class="ag-courses-item_link">
-                        <div class="ag-courses-item_bg"></div>
-
-                        <div class="ag-courses-item_title">
-                            Recovery rate prediction
-                        </div>
-
+        
                         <div class="ag-courses-item_date-box">
                             Start:
                             <span class="ag-courses-item_date">
@@ -153,15 +96,15 @@
                         </div>
                     </a>
                 </div>
-
+        
                 <div class="ag-courses_item">
-                    <a href="/communitypoll" class="ag-courses-item_link">
+                    <a href="/recoveryreport" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
-
+        
                         <div class="ag-courses-item_title">
-                            Community Support
+                            Recovery rate prediction
                         </div>
-
+        
                         <div class="ag-courses-item_date-box">
                             Start:
                             <span class="ag-courses-item_date">
@@ -169,8 +112,25 @@
                             </span>
                         </div>
                     </a>
-                </div> -->
-
+                </div>
+        
+                <div class="ag-courses_item">
+                    <a href="/communitypoll" class="ag-courses-item_link">
+                        <div class="ag-courses-item_bg"></div>
+        
+                        <div class="ag-courses-item_title">
+                            Community Support
+                        </div>
+        
+                        <div class="ag-courses-item_date-box">
+                            Start:
+                            <span class="ag-courses-item_date">
+                                04.11.2022
+                            </span>
+                        </div>
+                    </a>
+                </div>
+        
                 <!-- <div class="ag-courses_item">
                     <a href="#" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
@@ -187,7 +147,7 @@
                         </div>
                     </a>
                 </div> -->
-
+        
                 <!-- <div class="ag-courses_item">
                     <a href="#" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
@@ -197,7 +157,7 @@
                         </div>
                     </a>
                 </div> -->
-
+        
                 <!-- <div class="ag-courses_item">
                     <a href="#" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg">
@@ -207,7 +167,7 @@
                         </div>
                     </a>
                 </div> -->
-
+        
                 <!-- <div class="ag-courses_item">
                     <a href="#" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
@@ -224,11 +184,10 @@
                         </div>
                     </a>
                 </div> -->
-
+        
             </div>
         </div>
     </main>
-    <!-- <img src="https://source.unsplash.com/200x282/?stock-market" alt="boys" srcset=""> -->
     <!-- <div class="new">
         <figure>
             <img src="https://picsum.photos/id/287/250/300" alt="Mountains">
